MDEV-30531 Corrupt index(es) on busy table when using FOREIGN KEY

lock_wait(): Never return the transient error code DB_LOCK_WAIT.
In commit 78a04a4c22d54dc4f67f067fc9b7a0bc717ebfdd (MDEV-29869)
some assignments assign trx->error_state = DB_SUCCESS were removed,
and it was possible that the field was left at its initial value
DB_LOCK_WAIT.

The test case for this is nondeterministic; without this fix, it
would only occasionally fail.